--- a/src/sass/components/portfolio/_portfolio.scss
+++ b/src/sass/components/portfolio/_portfolio.scss
@@ -65,7 +65,19 @@ p {
   &:focus .descr {
     opacity: 1;
   }
-  // pointer-events: none;
+
+  @media screen and (min-width: 350px) and (max-width: 450px) {
+    max-width: 350px;
+    height: 100%;
+    text-align: center;
+    overflow: hidden;
+  }
+  @media screen and (min-width: 400px) and (max-width: 450px) {
+    max-width: 400px;
+  }
+  @media screen and (min-width: 450px) and (max-width: 470px) {
+    overflow: hidden;
+  }
 }
 
 .link {
@@ -83,6 +95,25 @@ p {
   background-color: #2196f3;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.img {
+  @media screen and (min-width: 350px) and (max-width: 370px) {
+    width: 100%;
+    margin-left: -19%;
+  }
+  @media screen and (min-width: 371px) and (max-width: 385px) {
+    width: 100%;
+    margin-left: -16%;
+  }
+  @media screen and (min-width: 386px) and (max-width: 400px) {
+    width: 100%;
+    margin-left: -14%;
+  }
+  @media screen and (min-width: 401px) and (max-width: 450px) {
+    width: 100%;
+    margin-left: -6%;
+  }
 }
 
 .descr {
